--- a/package.nuspec
+++ b/package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>DarkUI</id>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
     <title>DarkUI</title>
     <authors>Robin Perris</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,7 +11,7 @@
     <icon>icon-64.png</icon>
     <iconUrl>http://www.darkui.com/images/icon-64.png</iconUrl>
     <description>Dark themed control and docking library for .NET WinForms</description>
-    <releaseNotes>Expanded with new DarkComboBox, DarkGroupBox, and DarkNumericUpDown controls</releaseNotes>
+    <releaseNotes>Fixed rendering issue when resizing DarkComboBox at runtime</releaseNotes>
     <copyright>Copyright © Robin Perris</copyright>
     <tags>docking winforms net-winforms docking-library docking-application c-sharp dotnet dotnet-framework visual-studio visual-studio-themes windows windows-desktop windows-forms</tags>
   </metadata>
